--- a/gallery.html
+++ b/gallery.html
@@ -178,7 +178,7 @@
                     <figure><img src="img/2short02.JPG" alt="ショート２"></figure>
                     <figure><img src="img/2short03.JPG" alt="ショート３"></figure>
                   </div>
-                  <div>
+                  <div class="responsive-size">
                     <figure><img src="img/2short04.JPG" alt="ショート４"></figure>
                     <figure><img src="img/2short05.JPG" alt="ショート５"></figure>
                   </div>
@@ -208,7 +208,7 @@
                   <figure><img src="img/2mid02.jpeg" alt="ミディアム2"></figure>
                   <figure><img src="img/2mid03.JPG" alt="ミディアム3"></figure>
                 </div>
-                <div>
+                <div class="responsive-size">
                   <figure><img src="img/2mid04.jpeg" alt="ミディアム4"></figure>
                   <figure><img src="img/2mid05.JPG" alt="ミディアム5"></figure>
                 </div>
@@ -237,7 +237,7 @@
                 <figure><img src="img/2long01.JPG" alt="ロング１"></figure>
                 <figure><img src="img/2long02.JPG" alt="ロング２"></figure>
               </div>
-              <div>
+              <div class="responsive-size">
                 <figure><img src="img/2long03.JPG" alt="ロング３"></figure>
               </div>
             </div>
