--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           <div class="calendar-title__Area">
             <h2>Calendar</h2>
           </div>
-          <div id="clendarUp">
+          <div id="clendarUp clendar-up ">
             <div class="calendar-container__wrap">
               <div class="calendar-container" id="calendar-slider01">
                 <h3><span>2022</span>年 <span>3</span>月</h3>
