--- a/menu.html
+++ b/menu.html
@@ -169,18 +169,18 @@
             <h2>CUT</h2>
             <table class="cut-price">
               <tr>
-                <th>男性カット<br /><span>シャンプー・ブロー込み</span></th>
-                <td>................................</td>
+                <th>男性カット<span>シャンプー・ブロー込み</span></th>
+                <td></td>
                 <td>¥2,800</td>
               </tr>
               <tr>
-                <th>女性カット<br /><span>シャンプー・ブロー込み</span></th>
-                <td>................................</td>
+                <th>女性カット<span>シャンプー・ブロー込み</span></th>
+                 <td></td>
                 <td>¥3,300</td>
               </tr>
               <tr>
-                <th>子どもカット<br /><span>シャンプー・ブロー込み</span></th>
-                <td>................................</td>
+                <th>子どもカット<span>シャンプー・ブロー込み</span></th>
+                <td></td>
                 <td>¥2,800</td>
               </tr>
             </table>
@@ -193,33 +193,33 @@
               <h2>COLOR</h2>
               <table>
                 <tr>
-                  <th>カラー<br /><span>シャンプー・ブロー込み</span></th>
-                  <td>................................</td>
+                  <th>カラー<span>シャンプー・ブロー込み</span></th>
+                  <td></td>
                   <td>¥5,800</td>
                 </tr>
                 <tr>
-                  <th>リタッチ<br /><span>シャンプー・ブロー込み</span></th>
-                  <td>................................</td>
+                  <th>リタッチ<span>シャンプー・ブロー込み</span></th>
+                  <td></td>
                   <td>¥4,800</td>
                 </tr>
                 <tr>
-                  <th>ダブルカラー<br /><span></span></th>
-                  <td>................................</td>
+                  <th>ダブルカラー<span></span></th>
+                  <td></td>
                   <td>¥12,900~</td>
                 </tr>
                 <tr>
-                  <th>Tゾーン（分け目生え際）<br /><span></span></th>
-                  <td>................................</td>
+                  <th>Tゾーン（分け目生え際）<span></span></th>
+                  <td></td>
                   <td>¥4,100</td>
                 </tr>
                 <tr>
-                  <th>カット＋カラー＋トリートメント<br /><span></span></th>
-                  <td>................................</td>
+                  <th>カット+カラー+トリートメント</th>
+                  <td></td>
                   <td>¥10,100</td>
                 </tr>
                 <tr>
                   <th>イルミナカラー<br /><span></span></th>
-                  <td>................................</td>
+                  <td></td>
                   <td>+¥1,000</td>
                 </tr>
               </table>
@@ -228,33 +228,33 @@
               <h2>PERM</h2>
               <table>
                 <tr>
-                  <th>パーマ<br /><span>シャンプー・ブロー込み</span></th>
-                  <td>................................</td>
+                  <th>パーマ<span>シャンプー・ブロー込み</span></th>
+                  <td></td>
                   <td>¥7,800</td>
                 </tr>
                 <tr>
-                  <th>カット＋パーマ<br /><span></span></th>
-                  <td>................................</td>
+                  <th>カット＋パーマ<span></span></th>
+                  <td></td>
                   <td>¥9,600</td>
                 </tr>
                 <tr>
-                  <th>カット＋ポイントパーマ<br /><span></span></th>
-                  <td>................................</td>
+                  <th>カット＋ポイントパーマ<span></span></th>
+                  <td></td>
                   <td>¥6,600</td>
                 </tr>
                 <tr>
                   <th>カット＋パーマ＋トリートメント<br /><span></span></th>
-                  <td>................................</td>
+                  <td></td>
                   <td>¥11,600</td>
                 </tr>
                 <tr>
-                  <th>前髪パーマ<br /><span>シャンプー・ブロー込み</span></th>
-                  <td>................................</td>
+                  <th>前髪パーマ<span>シャンプー・ブロー込み</span></th>
+                  <td></td>
                   <td>¥2,200</td>
                 </tr>
                 <tr>
-                  <th>縮毛矯正<br /><span>シャンプー・ブロー込み</span></th>
-                  <td>................................</td>
+                  <th>縮毛矯正<span>シャンプー・ブロー込み</span></th>
+                  <td></td>
                   <td>¥9,600</td>
                 </tr>
               </table>
@@ -270,22 +270,22 @@
               <table class="haircare-price">
                 <tr>
                   <th>クイックトリートメント<br /><span></span></th>
-                  <td>................................</td>
+                  <td></td> 
                   <td>¥1,000~</td>
                 </tr>
                 <tr>
-                  <th>ハホニコラメラメ<br /><span>トリートメント</span></th>
-                  <td>................................</td>
+                  <th>ハホニコラメラメトリートメント</th>
+                  <td></td>
                   <td>¥3,000</td>
                 </tr>
                 <tr>
                   <th>コモレビトリートメント<br /><span></span></th>
-                  <td>................................</td>
+                  <td></td>
                   <td>¥5,000</td>
                 </tr>
                 <tr>
                     <th>耐熱トリートメント *<br /><span></span></th>
-                    <td>................................</td>
+                    <td></td>
                     <td>¥5,000</td>
                   </tr>
               </table>
@@ -309,20 +309,20 @@
                 <h2>HEAD SPA</h2>
                 <table class="spa-price">
                   <tr>
-                    <th>血行促進マッサージ<br /><span>シャンプー</span></th>
-                    <td>................................</td>
+                    <th>血行促進マッサージ<span>シャンプー</span></th>
+                    <td></td> 
                     <td>+¥500
                       <br><span>（5分）</span></td>
                   </tr>
                   <tr>
                     <th>頭皮オイルマッサージ<br /><span></span></th>
-                    <td>................................</td>
+                    <td></td>
                     <td>+¥1,000
                       <br><span>（10分）</span></td>
                   </tr>
                   <tr>
                     <th>頭皮オイルマッサージ<br /><span>＋マッサージシャンプー</span></th>
-                    <td>................................</td>
+                    <td></td>
                     <td>¥3,500
                       <br><span>（40分）</span></td>
                   </tr>
@@ -330,7 +330,7 @@
                     <th>頭皮オイルマッサージ<br /><span>＋マッサージシャンプー
                       <br>＋頭蓋骨の微調整
                     </span></th>
-                    <td>................................</td>
+                    <td></td>
                     <td>¥5,000
                       <br><span>（60分）</span></td>
                     </tr>
