--- a/gallery.html
+++ b/gallery.html
@@ -172,19 +172,19 @@
             <div class="style-area__wrapper">
               <div class="style-photo_sub">
                 <h3>ショート</h3>
-                <div class="small-photo__area">
+                <div id="small-photo__area" class="small-photo__area">
                   <div>
-                    <figure><img src="img/2short01.JPG" alt="ショート１"></figure>
-                    <figure><img src="img/2short02.JPG" alt="ショート２"></figure>
-                    <figure><img src="img/2short03.JPG" alt="ショート３"></figure>
+                    <figure><img class="delay-time01" src="img/2short01.JPG" alt="ショート１"></figure>
+                    <figure><img class="delay-time02" src="img/2short02.JPG" alt="ショート２"></figure>
+                    <figure><img class="delay-time03" src="img/2short03.JPG" alt="ショート３"></figure>
                   </div>
                   <div class="responsive-size">
-                    <figure><img src="img/2short04.JPG" alt="ショート４"></figure>
-                    <figure><img src="img/2short05.JPG" alt="ショート５"></figure>
+                    <figure><img class="delay-time04" src="img/2short04.JPG" alt="ショート４"></figure>
+                    <figure><img class="delay-time05" src="img/2short05.JPG" alt="ショート５"></figure>
                   </div>
                 </div>
               </div>
-              <div class="gallery-photo_main">
+              <div id="gallery-photo_main" class="gallery-photo_main">
                 <figure><img src="img/2short01.JPG" alt="ショート１"></figure>
               </div>
               <div class="style-subtitle">
@@ -202,19 +202,19 @@
           <div class="style-area__wrapper oposite">
             <div class="style-photo_sub">
               <h3>ショート 〜 ミディアム</h3>
-              <div class="small-photo__area">
+              <div id="small-photo__area2" class="small-photo__area">
                 <div>
-                  <figure><img src="img/2mid01.JPG" alt="ミディアム１"></figure>
-                  <figure><img src="img/2mid02.jpeg" alt="ミディアム2"></figure>
-                  <figure><img src="img/2mid03.JPG" alt="ミディアム3"></figure>
+                  <figure><img class="delay-time01" src="img/2mid01.JPG" alt="ミディアム１"></figure>
+                  <figure><img class="delay-time02" src="img/2mid02.jpeg" alt="ミディアム2"></figure>
+                  <figure><img class="delay-time03" src="img/2mid03.JPG" alt="ミディアム3"></figure>
                 </div>
                 <div class="responsive-size">
-                  <figure><img src="img/2mid04.jpeg" alt="ミディアム4"></figure>
-                  <figure><img src="img/2mid05.JPG" alt="ミディアム5"></figure>
+                  <figure><img class="delay-time04" src="img/2mid04.jpeg" alt="ミディアム4"></figure>
+                  <figure><img class="delay-time05" src="img/2mid05.JPG" alt="ミディアム5"></figure>
                 </div>
               </div>
             </div>
-            <div class="gallery-photo_main">
+            <div id="gallery-photo_main2" class="gallery-photo_main">
               <figure><img src="img/2mid01.JPG" alt="ミディアム１"></figure>
             </div>
             <div class="style-subtitle-m">
@@ -232,17 +232,17 @@
         <div class="style-area__wrapper">
           <div class="style-photo_sub">
             <h3>ロング</h3>
-            <div class="small-photo__area-l">
+            <div id="small-photo__area3" class="small-photo__area-l">
               <div>
-                <figure><img src="img/2long01.JPG" alt="ロング１"></figure>
-                <figure><img src="img/2long02.JPG" alt="ロング２"></figure>
+                <figure><img class="delay-time01" src="img/2long01.JPG" alt="ロング１"></figure>
+                <figure><img class="delay-time02" src="img/2long02.JPG" alt="ロング２"></figure>
               </div>
               <div class="responsive-size">
-                <figure><img src="img/2long03.JPG" alt="ロング３"></figure>
+                <figure><img class="delay-time03" src="img/2long03.JPG" alt="ロング３"></figure>
               </div>
             </div>
           </div>
-          <div class="gallery-photo_main">
+          <div id="gallery-photo_main3" class="gallery-photo_main">
             <figure><img src="img/2long01.JPG" alt="ロング１"></figure>
           </div>
           <div class="style-subtitle">
@@ -261,18 +261,18 @@
       <div class="style-area__wrapper oposite">
         <div class="style-photo_sub">
           <!-- <h3></h3> -->
-          <div class="small-photo__area-men">
+          <div id="small-photo__area4" class="small-photo__area-men">
             <div>
-              <figure><img src="img/2men01.JPG" alt="メン１"></figure>
+              <figure><img class="delay-time01" src="img/2men01.JPG" alt="メン１"></figure>
               <figure><img src="img/2men02.JPG" alt="メン２"></figure>
             </div>
             <div class="men-margin">
-              <figure><img src="img/2men03.JPG" alt="メン３"></figure>
-              <figure><img src="img/2men04.JPG" alt="メン４"></figure>
+              <figure><img class="delay-time02" src="img/2men03.JPG" alt="メン３"></figure>
+              <figure><img class="delay-time03" src="img/2men04.JPG" alt="メン４"></figure>
             </div>
           </div>
         </div>
-        <div class="gallery-photo_main">
+        <div id="gallery-photo_main4" class="gallery-photo_main">
           <figure><img src="img/2men01.JPG" alt="メン１"></figure>
         </div>
         <div class="style-subtitle-men">
