--- a/index.html
+++ b/index.html
@@ -217,9 +217,7 @@
 
         <video
           class="bg-video pc"
-          src="/img/first-view.mp4"
-          webkit-playsinline
-          playsinline
+          src="img/first-view.mp4"
           loop
           autoplay
           muted
