--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/d3b6354499.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="https://use.typekit.net/iei0ufy.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ats4pay.css" />
     <link rel="stylesheet" href="https://use.typekit.net/iei0ufy.css" />
@@ -44,7 +48,7 @@
                 <ul class="nav-containar">
                   <li>
                     <a href="#Reserve">
-                      <div class="nav-containar__child">
+                      <div class="nav-containar__child sp-ver">
                         <div class="nav-text">
                           <p>ご予約</p>
                           <p></p>
@@ -480,7 +484,9 @@
           </div>
           <div class="reserve-area">
             <h2>お電話でご予約を承っております。</h2>
-            <h3>044-455-4594</h3>
+            <a href="tel:044-455-4594"
+              ><h3><span>📞 </span>044-455-4594</h3></a
+            >
             <p>(営業時間10時〜20時・定休日を除く)</p>
           </div>
         </div>
@@ -512,7 +518,7 @@
           rel="”noopener”"
         >
           <button>
-            <p>googlemapを見る<i class="fas fa-chevron-circle-right"></i></p>
+            <p>googlemapを見る<i class="fa-solid fa-angle-right"></i></p>
           </button>
         </a>
       </section>
