--- a/menu.html
+++ b/menu.html
@@ -165,30 +165,34 @@
     <main>
       <section>
         <div class="display-flex__allArea">
-          <div class="cut-area">
-            <h2>CUT</h2>
-            <table class="cut-price">
-              <tr>
-                <th>男性カット<span>シャンプー・ブロー込み</span></th>
-                <td></td>
-                <td>¥2,800</td>
-              </tr>
-              <tr>
-                <th>女性カット<span>シャンプー・ブロー込み</span></th>
-                 <td></td>
-                <td>¥3,300</td>
-              </tr>
-              <tr>
-                <th>子どもカット<span>シャンプー・ブロー込み</span></th>
-                <td></td>
-                <td>¥2,800</td>
-              </tr>
-            </table>
-            <figure>
-              <img src="img/3sizers.jpeg" alt="ハサミ" />
-            </figure>
+          <div id="display-flex__allArea" class="cut-area">
+            <div class="cut-detail">
+              <h2>CUT</h2>
+              <table class="cut-price">
+                <tr>
+                  <th>男性カット<span>シャンプー・ブロー込み</span></th>
+                  <td></td>
+                  <td>¥2,800</td>
+                </tr>
+                <tr>
+                  <th>女性カット<span>シャンプー・ブロー込み</span></th>
+                  <td></td>
+                  <td>¥3,300</td>
+                </tr>
+                <tr>
+                  <th>子どもカット<span>シャンプー・ブロー込み</span></th>
+                  <td></td>
+                  <td>¥2,800</td>
+                </tr>
+              </table>
+            </div>
+             <div id="cutImage">
+              <figure>
+                <img src="img/3sizers.jpeg" alt="ハサミ" />
+              </figure>
+             </div>
           </div>
-          <div class="color-perm-area">
+          <div id="color-area" class="color-perm-area">
             <div class="color-price">
               <h2>COLOR</h2>
               <table>
@@ -224,7 +228,7 @@
                 </tr>
               </table>
             </div>
-            <div class="perm-price">
+            <div id="perm-price" class="perm-price">
               <h2>PERM</h2>
               <table>
                 <tr>
@@ -264,7 +268,7 @@
       </section>
 
       <section>
-        <div class="display-flex__allArea2">
+        <div id="display-flex__allArea2" class="display-flex__allArea2">
             <div class="haircare-area">
               <h2>HAIR CARE</h2>
               <table class="haircare-price">
@@ -291,7 +295,7 @@
               </table>
                <p>*髪の芯から補修してくれる美容室専用のハイパフォーマンスのトリートメントです。</p>
             </div>
-            <div class="haircare-photo">
+            <div id="haircarePhoto" class="haircare-photo">
               <figure>
                 <img src="img/3products.jpeg" alt="商品" />
               </figure>
@@ -300,12 +304,12 @@
 
       <section>
         <div class="display-flex__allArea3">
-              <div class="spa-photo">
+              <div id="spaPhoto" class="spa-photo">
                 <figure>
                   <img src="img/3inShop.jpeg" alt="店内" />
                 </figure>
               </div>
-              <div class="spa-area">
+              <div id="spaArea" class="spa-area">
                 <h2>HEAD SPA</h2>
                 <table class="spa-price">
                   <tr>
@@ -339,17 +343,18 @@
       </section>
       <section>
         <div class="display-flex__allArea4">
-              <div class="info-area">
+              <div id="infoArea" class="info-area">
                 <h2>お支払い方法について</h2>
                 <p>施術料を抑える為、現金のみの取り扱いです。<br>あらかじめご了承ください。
                   </p>
                 <p>※価格は全て税込です。</p>
               </div>
-                <div class="info-photo">
+                <div id="infoPhoto" class="info-photo">
                   <figure>
                     <img src="img/3welcome.jpeg" alt="welcome" />
                   </figure>
                 </div>
+          </div>
       </section>
     </main>
 
