--- a/index.html
+++ b/index.html
@@ -274,8 +274,7 @@
               <li>美容師歴17年</li>
               <li>得意なスタイル / 再現性の高いカット・ショートヘア</li>
               <li>
-                お客さまひとりひとりに似合う髪型の実現と自宅での再現性を<br />
-                大切にしています。<br />
+                お客さまひとりひとりに似合う髪型の実現と自宅での再現性を大切にしています。<br />
                 髪のクセなどはドライヤーのやり方１つで劇的に収まりやすくなり、<br />
                 ご自宅でできる豆知識などもお伝えします。<br />
                 小さなお店でお客様ひとりに私ひとりで丁寧に対応させていただきます。<br />
