--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <div class="header-container">
-        <a href="#">
+        <a href="index.html">
           <figure><img src="img/logo.png" alt="ロゴ１" /></figure>
         </a>
         <div id="open-button" class="open-button"><span></span></div>
