--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
     <header>
        <div class="header-wrapper">
           <div class="header-container">
-            <a href="#">
+            <a href="index.html">
             <figure><img src="img/logo.png" alt="ロゴ１" /></figure>
             </a>
             <div id="open-button" class="open-button"><span></span></div>
