--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no" />
     <title>Top</title>
     <link rel="stylesheet" href="css/reset.css" />
 
@@ -37,7 +38,7 @@
           <div class="slider-items slider-photo03"></div>
           <div class="slider-items slider-photo04"></div>
         </div>
-        <div class="header-container">
+        <div id="header-container" class="header-container">
           <a href="#">
             <figure><img src="img/logo.png" alt="ロゴ１" /></figure>
           </a>
