--- a/gallery.html
+++ b/gallery.html
@@ -176,6 +176,7 @@
                     <h3>ショート</h3>
                     <div id="small-photo__area"
                     class="small-photo__area">
+                    
                       <div>
                         <figure><img id="smallImage01"    
                         @click="activate1" 
@@ -216,33 +217,47 @@
           </section>
 
           <section class="gallery-bgArea">
-            <div class="gallery-bg-m">
-              <div></div>
-            </div>
-            <div class="row gallery-area">
-              <div class="style-area__wrapper oposite">
-                <div class="style-photo_sub">
-                  <h3>ショート 〜 ミディアム</h3>
-                  <div id="small-photo__area2" class="small-photo__area">
-                    <div>
-                      <figure><img class="delay-time01" src="img/2mid01.JPG" alt="ミディアム１"></figure>
-                      <figure><img class="delay-time02" src="img/2mid02.jpeg" alt="ミディアム2"></figure>
-                      <figure><img class="delay-time03" src="img/2mid03.JPG" alt="ミディアム3"></figure>
-                    </div>
-                    <div class="responsive-size">
-                      <figure><img class="delay-time04" src="img/2mid04.jpeg" alt="ミディアム4"></figure>
-                      <figure><img class="delay-time05" src="img/2mid05.JPG" alt="ミディアム5"></figure>
+            <div id="app2">
+              <div class="gallery-bg-m">
+                <div></div>
+              </div>
+              <div class="row gallery-area">
+                <div class="style-area__wrapper oposite">
+                  <div class="style-photo_sub">
+                    <h3>ショート 〜 ミディアム</h3>
+                    <div id="small-photo__area2" class="small-photo__area">
+                      <div>
+                        <figure><img
+                          id="smallImage-m01"
+                          class="delay-time01" src="img/2mid01.JPG" alt="ミディアム１"></figure>
+                        <figure><img 
+                          id="smallImage-m02"
+                          class="delay-time02" src="img/2mid02.jpeg" alt="ミディアム2"></figure>
+                        <figure><img 
+                          id="smallImage-m03"
+                          class="delay-time03" src="img/2mid03.JPG" alt="ミディアム3"></figure>
+                      </div>
+                      <div class="responsive-size">
+                        <figure><img 
+                          id="smallImage-m04"
+                          class="delay-time04" src="img/2mid04.jpeg" alt="ミディアム4"></figure>
+                        <figure><img 
+                          id="smallImage-m05"
+                          class="delay-time05" src="img/2mid05.JPG" alt="ミディアム5"></figure>
+                      </div>
                     </div>
                   </div>
+                  <div id="gallery-photo_main2" class="gallery-photo_main">
+                    <figure><img 
+                      id="mainImage2"
+                      src="img/2mid01.JPG" alt="ミディアム１"></figure>
+                  </div>
+                  <div class="style-subtitle-m">
+                  <p>Short to Medium</p>
+                  </div>
                 </div>
-                <div id="gallery-photo_main2" class="gallery-photo_main">
-                  <figure><img src="img/2mid01.JPG" alt="ミディアム１"></figure>
-                </div>
-                <div class="style-subtitle-m">
-                <p>Short to Medium</p>
-                </div>
-              </div>
-          </div>
+            </div>
+        </div>
         </section>
 
         <section class="gallery-bgArea">
@@ -255,16 +270,24 @@
                 <h3>ロング</h3>
                 <div id="small-photo__area3" class="small-photo__area-l">
                   <div>
-                    <figure><img class="delay-time01" src="img/2long01.JPG" alt="ロング１"></figure>
-                    <figure><img class="delay-time02" src="img/2long02.JPG" alt="ロング２"></figure>
+                    <figure><img 
+                      id="smallImage-l01"
+                      class="delay-time01" src="img/2long01.JPG" alt="ロング１"></figure>
+                    <figure><img 
+                      id="smallImage-l02"
+                      class="delay-time02" src="img/2long02.JPG" alt="ロング２"></figure>
                   </div>
                   <div class="responsive-size">
-                    <figure><img class="delay-time03" src="img/2long03.JPG" alt="ロング３"></figure>
+                    <figure><img 
+                      id="smallImage-l03"
+                      class="delay-time03" src="img/2long03.JPG" alt="ロング３"></figure>
                   </div>
                 </div>
               </div>
               <div id="gallery-photo_main3" class="gallery-photo_main">
-                <figure><img src="img/2long01.JPG" alt="ロング１"></figure>
+                <figure><img
+                  id="mainImage3"
+                  src="img/2long01.JPG" alt="ロング１"></figure>
               </div>
               <div class="style-subtitle">
               <p>Long hair</p>
@@ -284,17 +307,27 @@
               <!-- <h3></h3> -->
               <div id="small-photo__area4" class="small-photo__area-men">
                 <div>
-                  <figure><img class="delay-time01" src="img/2men01.JPG" alt="メン１"></figure>
-                  <figure><img src="img/2men02.JPG" alt="メン２"></figure>
+                  <figure><img
+                    id="smallImage-men01"
+                    class="delay-time01" src="img/2men01.JPG" alt="メン１"></figure>
+                  <figure><img
+                    id="smallImage-men02"
+                    src="img/2men02.JPG" alt="メン２"></figure>
                 </div>
                 <div class="men-margin">
-                  <figure><img class="delay-time02" src="img/2men03.JPG" alt="メン３"></figure>
-                  <figure><img class="delay-time03" src="img/2men04.JPG" alt="メン４"></figure>
+                  <figure><img 
+                    id="smallImage-men03"
+                    class="delay-time02" src="img/2men03.JPG" alt="メン３"></figure>
+                  <figure><img 
+                    id="smallImage-men04"
+                    class="delay-time03" src="img/2men04.JPG" alt="メン４"></figure>
                 </div>
               </div>
             </div>
             <div id="gallery-photo_main4" class="gallery-photo_main">
-              <figure><img src="img/2men01.JPG" alt="メン１"></figure>
+              <figure><img 
+                id="mainImage4"
+                src="img/2men01.JPG" alt="メン１"></figure>
             </div>
             <div class="style-subtitle-men">
             <p>Style of men</p>
