--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
                 class="input-tug"
                 type="radio"
                 id="chice01"
-                name="radio-choice"
+                name="radioChoice"
                 checked
                 value=""
               />
@@ -214,7 +214,7 @@
                 class="input-tug"
                 type="radio"
                 id="chice02"
-                name="radio-choice"
+                name="radioChoice"
                 value=""
                 style="font-size: 24px"
               />
@@ -226,7 +226,7 @@
                 class="input-tug"
                 type="radio"
                 id="chice03"
-                name="radio-choice"
+                name="radioChoice"
                 value=""
                 style="font-size: 24px"
               />
@@ -251,7 +251,7 @@
             <input
               id="furigana"
               type="text"
-              name="name"
+              name="furigana"
               value=""
               placeholder=""
               required="required"
@@ -288,9 +288,9 @@
           <div class="emailKakunin-area">
             <label for="email">メールアドレス(確認)<span>*</span></label>
             <input
-              id="email"
+              id="emailCheck"
               type="email"
-              name="email"
+              name="emailCheck"
               value=""
               placeholder=""
               required="required"
@@ -320,8 +320,10 @@
             />
             <a href="#"><span>プライバシーポリシー</span>に同意する。</a>
           </div>
+          <a href="">
             <div class="click-button">
-              <input type="submit" value="確認する" /></a>
+               <input type="submit" value="確認する" />
+          </a>
         </form>
       </section>
     </main>
