--- a/gallery.html
+++ b/gallery.html
@@ -277,7 +277,7 @@
                       id="smallImage-l02"
                       class="delay-time02" src="img/2long02.JPG" alt="ロング２"></figure>
                   </div>
-                  <div class="responsive-size">
+                  <div class="responsive-size03">
                     <figure><img 
                       id="smallImage-l03"
                       class="delay-time03" src="img/2long03.JPG" alt="ロング３"></figure>
