--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,7 @@
 
       <section class="row">
         <div class="form-area">
-        <form method="post" action="#">
+        <form method="post" action="contact-confirm.php" name="form">
            <h2>お問い合わせ項目<span>*</span></h2>
            <div class="radio-buttom">
             <label for="choice01"></label>
