--- a/contact.html
+++ b/contact.html
@@ -324,6 +324,7 @@
           <a href="">
             <div class="click-button">
                <input type="submit" value="確認する" />
+            </div>
           </a>
         </form>
       </section>
