--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="contact.html" target="”_blank”" rel="”noopener”">
+                  <a href="contact.html#contact" target="”_blank”" rel="”noopener”">
                     <div class="nav-containar__child border-underline">
                       <div class="nav-text">
                         <p>お問合せ</p>
@@ -152,7 +152,7 @@
     </header>
 
     <main>
-      <section class="contact-relative">
+      <section id="contact" class="contact-relative">
         <div class="contact-bgArea">
           <div class="row">
             <h1>Contact</h1>
