--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="contact.html#contact" target="”_blank”" rel="”noopener”">
+                  <a href="#contact" target="”_blank”" rel="”noopener”">
                     <div class="nav-containar__child border-underline">
                       <div class="nav-text">
                         <p>お問合せ</p>
