--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@
                 id="chice01"
                 name="radioChoice"
                 checked
-                value=""
+                value="施術内容に関して"
               />
               施術内容に関して
             </div>
@@ -216,7 +216,7 @@
                 type="radio"
                 id="chice02"
                 name="radioChoice"
-                value=""
+                value="メニューや金額に関して"
                 style="font-size: 24px"
               />
               メニューや金額に関して
@@ -228,7 +228,7 @@
                 type="radio"
                 id="chice03"
                 name="radioChoice"
-                value=""
+                value="その他"
                 style="font-size: 24px"
               />
               その他
