--- a/gallery.html
+++ b/gallery.html
@@ -20,146 +20,147 @@
   </head>
 
   <body>
-    
-    <header>
-       <div class="header-wrapper">
-          <div class="header-container">
-            <a href="index.html">
-            <figure><img src="img/logo.png" alt="ロゴ１" /></figure>
-            </a>
-            <div id="open-button" class="open-button"><span></span></div>
-            <nav id="nav">
-              <div class="nav-wrapper">
-                <div class="nav-list-area">
-                  <ul class="nav-containar">
-                    <li>
-                      <a href="index.html#Reserve">
-                        <div class="nav-containar__child">
-                          <div class="nav-text">
-                            <p>ご予約</p>
-                            <p></p>
-                            <p>Reserve</p>
+    <div class="header-wrap">
+      <header>
+        <div class="header-wrapper">
+            <div class="header-container">
+              <a href="index.html">
+              <figure><img src="img/logo.png" alt="ロゴ１" /></figure>
+              </a>
+              <div id="open-button" class="open-button"><span></span></div>
+              <nav id="nav">
+                <div class="nav-wrapper">
+                  <div class="nav-list-area">
+                    <ul class="nav-containar">
+                      <li>
+                        <a href="index.html#Reserve">
+                          <div class="nav-containar__child">
+                            <div class="nav-text">
+                              <p>ご予約</p>
+                              <p></p>
+                              <p>Reserve</p>
+                            </div>
                           </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index.html#concept">
-                        <div class="nav-containar__child">
-                          <div class="nav-text">
-                            <p>コンセプト</p>
-                            <p></p>
-                            <p>Concept</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="index.html#concept">
+                          <div class="nav-containar__child">
+                            <div class="nav-text">
+                              <p>コンセプト</p>
+                              <p></p>
+                              <p>Concept</p>
+                            </div>
                           </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="menu.html">
-                        <div class="nav-containar__child">
-                          <div class="nav-text border-none">
-                            <p>メニュー＆料金</p>
-                            <p></p>
-                            <p>Menu & Price</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="menu.html">
+                          <div class="nav-containar__child">
+                            <div class="nav-text border-none">
+                              <p>メニュー＆料金</p>
+                              <p></p>
+                              <p>Menu & Price</p>
+                            </div>
                           </div>
-                        </div>
-                      </a>
-                    </li>
-                  </ul>
-                  <ul class="nav-containar">
-                    <li>
-                      <a href="gallery.html">
-                        <div class="nav-containar__child">
-                          <div class="nav-text">
-                            <p>スタイルギャラリー</p>
-                            <p></p>
-                            <p>Style Gallery</p>
+                        </a>
+                      </li>
+                    </ul>
+                    <ul class="nav-containar">
+                      <li>
+                        <a href="gallery.html">
+                          <div class="nav-containar__child">
+                            <div class="nav-text">
+                              <p>スタイルギャラリー</p>
+                              <p></p>
+                              <p>Style Gallery</p>
+                            </div>
                           </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index.html#stylist">
-                        <div class="nav-containar__child">
-                          <div class="nav-text">
-                            <p>スタイリスト</p>
-                            <p></p>
-                            <p>Stylist</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="index.html#stylist">
+                          <div class="nav-containar__child">
+                            <div class="nav-text">
+                              <p>スタイリスト</p>
+                              <p></p>
+                              <p>Stylist</p>
+                            </div>
                           </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index.html#calendar">
-                        <div class="nav-containar__child">
-                          <div class="nav-text border-none">
-                            <p>カレンダー</p>
-                            <p></p>
-                            <p>Calendar</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="index.html#calendar">
+                          <div class="nav-containar__child">
+                            <div class="nav-text border-none">
+                              <p>カレンダー</p>
+                              <p></p>
+                              <p>Calendar</p>
+                            </div>
                           </div>
-                        </div>
-                      </a>
-                    </li>
-                  </ul>
-                  <ul class="nav-containar">
-                    <li>
-                      <a href="index.html#news">
-                        <div class="nav-containar__child border-underline">
-                          <div class="nav-text">
-                            <p>お知らせ</p>
-                            <p></p>
-                            <p>News</p>
+                        </a>
+                      </li>
+                    </ul>
+                    <ul class="nav-containar">
+                      <li>
+                        <a href="index.html#news">
+                          <div class="nav-containar__child border-underline">
+                            <div class="nav-text">
+                              <p>お知らせ</p>
+                              <p></p>
+                              <p>News</p>
+                            </div>
                           </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="contact.html#contact" target="”_blank”" rel="”noopener”">
-                        <div class="nav-containar__child border-underline">
-                          <div class="nav-text">
-                            <p>お問合せ</p>
-                            <p></p>
-                            <p>Contact</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="contact.html#contact" target="”_blank”" rel="”noopener”">
+                          <div class="nav-containar__child border-underline">
+                            <div class="nav-text">
+                              <p>お問合せ</p>
+                              <p></p>
+                              <p>Contact</p>
+                            </div>
                           </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index.html#access">
-                        <div class="nav-containar__child border-underline">
-                          <div class="nav-text border-none">
-                            <p>アクセス</p>
-                            <p></p>
-                            <p>Access</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="index.html#access">
+                          <div class="nav-containar__child border-underline">
+                            <div class="nav-text border-none">
+                              <p>アクセス</p>
+                              <p></p>
+                              <p>Access</p>
+                            </div>
                           </div>
-                        </div>
+                        </a>
+                      </li>
+                    </ul>
+                    <div class="sns-area00">
+                      <a
+                        href="https://www.instagram.com/hair_room_comes/"
+                        target="”_blank”"
+                        rel="”noopener”"
+                      >
+                        <i class="fab fa-instagram"></i>
                       </a>
-                    </li>
-                  </ul>
-                  <div class="sns-area00">
-                    <a
-                      href="https://www.instagram.com/hair_room_comes/"
-                      target="”_blank”"
-                      rel="”noopener”"
-                    >
-                      <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="#">
-                      <i class="fab fa-twitter-square"></i>
-                    </a>
+                      <a href="#">
+                        <i class="fab fa-twitter-square"></i>
+                      </a>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </nav>
-          </div>
-          <div class="row">
-            <div class="subtitle-area">
-                <h2>Style Gallery</h2>
+              </nav>
             </div>
-         </div>
+            <div class="row">
+              <div class="subtitle-area">
+                  <h2>Style Gallery</h2>
+              </div>
+          </div>
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
+   </div>
 
     <main>
       <div id="app">
